# vr-quadcopter

./: .gitignore  CMakeLists.txt  controller.cpp  controller.h  frame.cpp  frame.h  motor.cpp  motor.h  quad.cpp  quad.h  rotor.cpp  rotor.h  scenario.cpp  scenario.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  testball.cpp  testball.h  textureloader.cpp  textureloader.h  wall.cpp  wall.h
application/: gmlibwrapper.cpp  gmlibwrapper.h  guiapplication.cpp  guiapplication.h  main.cpp  window.cpp
application/qml/: main.qml
hidmanager/: defaulthidmanager.cpp  defaulthidmanager.h  hidbinding.cpp  hidinput.cpp  hidinput.h  standardhidmanager.cpp
